--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@aws-amplify/ui-angular": "^1.0.17",
     "aws-amplify": "^4.2.2",
+    "aws-amplify-angular": "^6.0.8",
     "aws-iot-device-sdk-v2": "^1.5.4",
     "aws-mqtt": "^1.0.0",
     "aws-mqtt-client": "0.0.5",
