--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.1.1",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@aws-amplify/ui-angular": "^1.0.17",
+    "@types/crypto-js": "^4.0.2",
     "aws-amplify": "^4.2.2",
     "aws-amplify-angular": "^6.0.8",
     "aws-iot-device-sdk-v2": "^1.5.4",
