--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.1",
-    "@angular/cdk": "^12.1.1",
-    "@angular/common": "~12.1.1",
-    "@angular/compiler": "~12.1.1",
-    "@angular/core": "~12.1.1",
+    "@angular/animations": "^12.1.5",
+    "@angular/cdk": "^12.2.0",
+    "@angular/common": "^12.1.5",
+    "@angular/compiler": "^12.1.5",
+    "@angular/core": "^12.1.5",
     "@angular/fire": "^6.1.5",
-    "@angular/forms": "~12.1.1",
-    "@angular/material": "^12.1.1",
-    "@angular/platform-browser": "~12.1.1",
-    "@angular/platform-browser-dynamic": "~12.1.1",
-    "@angular/router": "~12.1.1",
+    "@angular/forms": "^12.1.5",
+    "@angular/material": "^12.2.0",
+    "@angular/platform-browser": "^12.1.5",
+    "@angular/platform-browser-dynamic": "^12.1.5",
+    "@angular/router": "^12.1.5",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@aws-amplify/ui-angular": "^1.0.17",
     "@types/crypto-js": "^4.0.2",
     "aws-amplify": "^4.2.2",
     "aws-amplify-angular": "^6.0.8",
-    "aws-iot-device-sdk-v2": "^1.5.4",
+    "aws-iot-device-sdk-v2": "^1.5.5",
     "aws-mqtt": "^1.0.0",
     "aws-mqtt-client": "0.0.5",
-    "aws-sdk": "^2.946.0",
-    "bootstrap": "^5.0.2",
+    "aws-sdk": "^2.963.0",
+    "bootstrap": "^5.1.0",
     "client-oauth2": "^4.3.3",
-    "crypto-js": "^4.0.0",
-    "firebase": "^8.7.1",
+    "crypto-js": "^4.1.1",
+    "firebase": "^8.9.0",
     "graphql": "^15.5.1",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
@@ -44,14 +44,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1300",
-    "@angular-devkit/build-angular": "~12.1.1",
-    "@angular/cli": "~12.1.1",
-    "@angular/compiler-cli": "~12.1.1",
+    "@angular-devkit/architect": "^0.1202.0",
+    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular/cli": "^12.1.4",
+    "@angular/compiler-cli": "^12.1.5",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "~3.6.0",
     "@types/leaflet": "^1.7.4",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.19",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
