--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.1.5",
+    "@angular/animations": "^12.2.0",
     "@angular/cdk": "^12.2.0",
-    "@angular/common": "^12.1.5",
-    "@angular/compiler": "^12.1.5",
-    "@angular/core": "^12.1.5",
+    "@angular/common": "^12.2.0",
+    "@angular/compiler": "^12.2.0",
+    "@angular/core": "^12.2.0",
     "@angular/fire": "^6.1.5",
-    "@angular/forms": "^12.1.5",
+    "@angular/forms": "^12.2.0",
     "@angular/material": "^12.2.0",
-    "@angular/platform-browser": "^12.1.5",
-    "@angular/platform-browser-dynamic": "^12.1.5",
-    "@angular/router": "^12.1.5",
+    "@angular/platform-browser": "^12.2.0",
+    "@angular/platform-browser-dynamic": "^12.2.0",
+    "@angular/router": "^12.2.0",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@aws-amplify/ui-angular": "^1.0.17",
     "@types/crypto-js": "^4.0.2",
+    "angularjs-gauge": "^2.2.0",
     "aws-amplify": "^4.2.2",
     "aws-amplify-angular": "^6.0.8",
     "aws-iot-device-sdk-v2": "^1.5.5",
     "aws-mqtt": "^1.0.0",
     "aws-mqtt-client": "0.0.5",
-    "aws-sdk": "^2.963.0",
+    "aws-sdk": "^2.964.0",
     "bootstrap": "^5.1.0",
     "client-oauth2": "^4.3.3",
     "crypto-js": "^4.1.1",
@@ -38,6 +39,7 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-gauge": "^4.0.0",
     "ngx-mqtt": "^9.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -45,9 +47,9 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1202.0",
-    "@angular-devkit/build-angular": "^12.1.4",
-    "@angular/cli": "^12.1.4",
-    "@angular/compiler-cli": "^12.1.5",
+    "@angular-devkit/build-angular": "^12.2.0",
+    "@angular/cli": "^12.2.0",
+    "@angular/compiler-cli": "^12.2.0",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "~3.6.0",
     "@types/leaflet": "^1.7.4",
