--- a/package.json
+++ b/package.json
@@ -22,19 +22,24 @@
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
+    "@aws-amplify/datastore": "^3.3.1",
     "@aws-amplify/ui-angular": "^1.0.17",
     "@types/crypto-js": "^4.0.2",
     "angularjs-gauge": "^2.2.0",
     "aws-amplify": "^4.2.2",
     "aws-amplify-angular": "^6.0.8",
+    "aws-appsync": "^4.1.1",
     "aws-iot-device-sdk-v2": "^1.5.5",
     "aws-mqtt": "^1.0.0",
     "aws-mqtt-client": "0.0.5",
     "aws-sdk": "^2.964.0",
     "bootstrap": "^5.1.0",
     "client-oauth2": "^4.3.3",
+    "es6-promise": "^4.2.8",
     "firebase": "^8.9.0",
     "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
+    "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "ngx-bootstrap": "^6.2.0",
