--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -35,8 +35,7 @@
           "attributes": [
             "UserPoolId",
             "AppClientIDWeb",
-            "AppClientID",
-            "IdentityPoolId"
+            "AppClientID"
           ]
         }
       ]
