--- a/angular.json
+++ b/angular.json
@@ -44,8 +44,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+             
               "src/styles.scss",
+              "src/theme.scss",
               "./node_modules/leaflet/dist/leaflet.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
@@ -114,8 +115,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              
               "src/styles.scss",
+              "src/theme.scss",
               "./node_modules/leaflet/dist/leaflet.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
