--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "leaflet": "^1.7.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-gauge": "^4.0.0",
+    "ngx-infinite-scroll": "^10.0.1",
     "ngx-mqtt": "^9.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
