--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.0",
-    "@angular/cdk": "^12.2.0",
+    "@angular/cdk": "^12.2.11",
     "@angular/common": "^12.2.0",
     "@angular/compiler": "^12.2.0",
     "@angular/core": "^12.2.0",
@@ -24,6 +24,7 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@aws-amplify/datastore": "^3.3.1",
     "@aws-amplify/ui-angular": "^1.0.17",
+    "@ncstate/sat-popover": "^8.0.1",
     "@types/crypto-js": "^4.0.2",
     "angularjs-gauge": "^2.2.0",
     "aws-amplify": "^4.2.2",
