--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -13,6 +13,17 @@ projects:
         region: eu-central-1
         apiId: null
         maxDepth: 2
+  ferrydock:
+    schemaPath: src/graphql/schema.json
+    includes:
+      - src/graphql/**/*.graphql
+    excludes:
+      - ./amplify/**
+    extensions:
+      amplify:
+        codeGenTarget: angular
+        generatedFileName: src/app/API.service.ts
+        docsFilePath: src/graphql
 extensions:
   amplify:
     version: 3
