--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,8 +1,5 @@
 {
-  "providers": [
-    "awscloudformation"
-  ],
-  "projectName": "ferjekai",
+  "projectName": "ferryDock",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
@@ -13,5 +10,8 @@
       "BuildCommand": "npm.cmd run-script build",
       "StartCommand": "ng serve"
     }
-  }
+  },
+  "providers": [
+    "awscloudformation"
+  ]
 }
