--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -78,6 +78,21 @@
           ]
         }
       ]
+    },
+    "iotdb3": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "ferrydock",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ]
+        }
+      ]
     }
   }
 }
