--- a/amplify/backend/function/iotDB/src/package.json
+++ b/amplify/backend/function/iotDB/src/package.json
@@ -8,6 +8,7 @@
     "aws-appsync": "^4.1.4",
     "aws-sdk": "^2.1013.0",
     "axios": "^0.23.0",
+    "cross-fetch": "^3.1.4",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.5",
     "http": "0.0.1-security",
