--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-amplify/ui-angular": "^1.0.17",
     "@ncstate/sat-popover": "^8.0.1",
     "@types/crypto-js": "^4.0.2",
+    "angular-plotly.js": "^4.0.4",
     "angularjs-gauge": "^2.2.0",
     "aws-amplify": "^4.2.2",
     "aws-amplify-angular": "^6.0.8",
@@ -47,6 +48,7 @@
     "ngx-gauge": "^4.0.0",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-mqtt": "^9.0.5",
+    "plotly.js-dist-min": "^2.6.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -60,6 +62,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/leaflet": "^1.7.4",
     "@types/node": "^12.20.19",
+    "@types/plotly.js-dist-min": "^2.3.0",
     "firebase-tools": "^8.0.0 || ^9.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
