--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ncstate/sat-popover": "^8.0.1",
     "@types/crypto-js": "^4.0.2",
     "angular-plotly.js": "^4.0.4",
+    "angular2-uuid": "^1.1.1",
     "angularjs-gauge": "^2.2.0",
     "aws-amplify": "^4.2.2",
     "aws-amplify-angular": "^6.0.8",
@@ -51,6 +52,7 @@
     "plotly.js-dist-min": "^2.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
