--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "graphql-tag": "^2.12.5",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
+    "keycloak-angular": "^8.4.0",
+    "keycloak-js": "^16.1.0",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.5.3",
     "ngx-bootstrap": "^6.2.0",
@@ -54,6 +56,7 @@
     "ngx-mqtt": "^9.0.5",
     "plotly.js-dist-min": "^2.7.0",
     "rxjs": "~6.6.0",
+    "sse.js": "^0.5.0",
     "tslib": "^2.2.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
