--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-amplify/datastore": "^3.3.1",
     "@aws-amplify/ui-angular": "^1.0.17",
     "@ncstate/sat-popover": "^8.0.1",
+    "@ngrx/store": "^13.0.2",
     "@types/crypto-js": "^4.0.2",
     "@types/leaflet.markercluster": "^1.4.6",
     "angular-auth-oidc-client": "12.0.3",
