--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bootstrap": "^5.1.0",
     "client-oauth2": "^4.3.3",
     "es6-promise": "^4.2.8",
+    "event-source-polyfill": "^1.0.26",
     "firebase": "^8.9.0",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
@@ -50,7 +51,9 @@
     "keycloak-angular": "^8.4.0",
     "keycloak-js": "^16.1.0",
     "leaflet": "^1.7.1",
+    "leaflet.boatmarker": "^1.1.5",
     "leaflet.markercluster": "^1.5.3",
+    "ng-event-source": "^1.0.14",
     "ngx-bootstrap": "^6.2.0",
     "ngx-gauge": "^4.0.0",
     "ngx-infinite-scroll": "^10.0.1",
@@ -67,6 +70,7 @@
     "@angular-devkit/build-angular": "^12.2.0",
     "@angular/cli": "^12.2.0",
     "@angular/compiler-cli": "^12.2.0",
+    "@types/event-source-polyfill": "^1.0.0",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "~3.6.0",
     "@types/leaflet": "^1.7.4",
