--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ngx-gauge": "^4.0.0",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-mqtt": "^9.0.5",
+    "ngx-socket-io": "^4.1.0",
     "plotly.js-dist-min": "^2.7.0",
     "rxjs": "~6.6.0",
     "sse.js": "^0.5.0",
