--- a/package.json
+++ b/package.json
@@ -10,47 +10,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
-    "@angular/cdk": "^12.2.11",
-    "@angular/common": "^12.2.0",
-    "@angular/compiler": "^12.2.0",
-    "@angular/core": "^12.2.0",
+    "@angular/animations": "^12.2.16",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
     "@angular/fire": "^6.1.5",
-    "@angular/forms": "^12.2.0",
-    "@angular/material": "^12.2.0",
-    "@angular/platform-browser": "^12.2.0",
-    "@angular/platform-browser-dynamic": "^12.2.0",
-    "@angular/router": "^12.2.0",
+    "@angular/forms": "^12.2.16",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@angular/service-worker": "^12.2.0",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@asymmetrik/ngx-leaflet-markercluster": "^5.0.1",
-    "@aws-amplify/datastore": "^3.3.1",
-    "@aws-amplify/ui-angular": "^1.0.17",
+    "@aws-amplify/datastore": "^3.12.1",
+    "@aws-amplify/ui-angular": "^1.0.35",
     "@ncstate/sat-popover": "^8.0.1",
-    "@types/crypto-js": "^4.0.2",
-    "@types/leaflet.markercluster": "^1.4.6",
+    "@types/crypto-js": "^4.1.1",
+    "@types/leaflet.markercluster": "^1.5.0",
     "angular-auth-oidc-client": "12.0.3",
     "angular-plotly.js": "^4.0.4",
     "angular2-uuid": "^1.1.1",
-    "aws-amplify": "^4.2.2",
-    "aws-amplify-angular": "^6.0.8",
-    "aws-appsync": "^4.1.1",
-    "aws-iot-device-sdk-v2": "^1.5.5",
+    "aws-amplify": "^4.3.26",
+    "aws-amplify-angular": "^6.0.26",
+    "aws-appsync": "^4.1.6",
+    "aws-iot-device-sdk-v2": "^1.8.2",
     "aws-mqtt": "^1.0.0",
     "aws-mqtt-client": "0.0.5",
-    "aws-sdk": "^2.964.0",
-    "bootstrap": "^5.1.0",
+    "aws-sdk": "^2.1158.0",
+    "bootstrap": "^5.1.3",
     "client-oauth2": "^4.3.3",
     "es6-promise": "^4.2.8",
     "event-source-polyfill": "^1.0.26",
-    "firebase": "^8.9.0",
-    "graphql": "^15.5.1",
-    "graphql-tag": "^2.12.5",
+    "firebase": "^8.10.1",
+    "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
     "keycloak-angular": "^8.4.0",
-    "keycloak-js": "^16.1.0",
-    "leaflet": "^1.7.1",
+    "keycloak-js": "^16.1.1",
+    "leaflet": "^1.8.0",
     "leaflet.boatmarker": "^1.1.5",
     "leaflet.markercluster": "^1.5.3",
     "ng-event-source": "^1.0.14",
@@ -58,35 +58,35 @@
     "ngx-gauge": "^4.0.0",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-mqtt": "^9.0.5",
-    "ngx-socket-io": "^4.1.0",
-    "plotly.js-dist-min": "^2.7.0",
+    "ngx-socket-io": "^4.2.0",
+    "plotly.js-dist-min": "^2.12.1",
     "rxjs": "~6.6.0",
     "sse.js": "^0.5.0",
-    "tslib": "^2.2.0",
+    "tslib": "^2.4.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1202.0",
-    "@angular-devkit/build-angular": "^12.2.0",
-    "@angular/cli": "^12.2.0",
-    "@angular/compiler-cli": "^12.2.0",
+    "@angular-devkit/architect": "^0.1202.17",
+    "@angular-devkit/build-angular": "^12.2.17",
+    "@angular/cli": "^12.2.17",
+    "@angular/compiler-cli": "^12.2.16",
     "@types/event-source-polyfill": "^1.0.0",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "~3.6.0",
-    "@types/leaflet": "^1.7.4",
-    "@types/node": "^12.20.19",
+    "@types/leaflet": "^1.7.11",
+    "@types/node": "^12.20.55",
     "@types/plotly.js-dist-min": "^2.3.0",
-    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "firebase-tools": "^9.23.3",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.7.0",
     "jsonc-parser": "^3.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "^4.0.2",
     "karma-jasmine-html-reporter": "^1.5.0",
     "open": "^7.0.3",
     "typescript": "~4.3.2"
